--- a/index.html
+++ b/index.html
@@ -3,56 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Journey to the depth of the ocean</title>
+    <title>Journey to the Depth of the Ocean</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
+  <body class="ocean-background">
     <header>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="discover.html">Discover marine Life</a></li>
-          <li><a href="join.html">Contact us</a></li>
+          <li><a href="discover.html">Discover Marine Life</a></li>
+          <li><a href="join.html">Contact Us</a></li>
         </ul>
       </nav>
     </header>
+
     <main>
       <section>
-        <h1>Journey to the Depth of the Ocean</h1>
+        <h1>Exploring the Depths of the Ocean</h1>
         <p>
-          Welcome to our ocean exploration website! Here, you can learn about
-          the fascinating world beneath the waves.
+          <strong>The oceans are one of the greatest mysteries of our planet.</strong>
+          <br />
+          <em>Join us</em> on this journey to explore the depths yet to <u>be discovered.</u>
         </p>
-        <img src="ocean.jpg" alt="Ocean" style="width: 100%; height: auto" />
-        <h2>Explore the Depths</h2>
-        <p>
-          Join us as we dive into the mysteries of the ocean. From coral reefs
-          to deep-sea trenches, there's so much to discover!
-        </p>
-        <p>
-          If you're interested in joining our exploration team, please fill out
-          the contact form on the Contact page.
-        </p>
-        <h2>Goals:</h2>
+
+        <h2>Journey Goals</h2>
         <ul>
-          <li>To discover the ocean Depths</li>
-          <li>To conduct research on the different marine life.</li>
-          <li>To raise awareness about ocean conservation.</li>
+          <li>Explore the ocean depths</li>
+          <li>Learn about different types of marine life</li>
+          <li>Understand the importance of oceans in Earth's ecosystem</li>
         </ul>
       </section>
 
       <section>
-        <h2>Video:</h2>
+        <h2>Introduction Video</h2>
         <iframe
           width="560"
           height="315"
           src="https://www.youtube-nocookie.com/embed/MfWyzrkFkg8?si=4YRA34e6TmB4l0lf"
-          title="YouTube video player"
+          title="Ocean Introduction"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
           allowfullscreen
         ></iframe>
       </section>
     </main>
+    <footer>
+      <p>&copy; 2025 Ocean Exploration Team. All rights reserved.</p>
+      
   </body>
 </html>
