finalized the second page content and adding imgs

--- a/discover.html
+++ b/discover.html
@@ -6,7 +6,7 @@
     <title>The Diverse Marine Life</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
+  <body class="ocean-background">
     <header>
       <nav>
         <ul>
@@ -83,5 +83,7 @@
         <p>Learn more from the <a href="https://marine-institute.example.com" target="_blank">Marine Institute</a>.</p>
       </section>
     </main>
+    <footer>
+        <p>&copy; 2025 Ocean Exploration Team. All rights reserved.</p> </footer> 
   </body>
 </html>
