finished the third page form

--- a/discover.html
+++ b/discover.html
@@ -21,21 +21,31 @@
       <section>
         <h1>Marine Species Exploration</h1>
         <p>
-          Discover the fascinating world of marine creatures — from vibrant coral reefs to majestic whales.
+          Discover the fascinating world of marine creatures — from vibrant
+          coral reefs to majestic whales.
         </p>
 
         <div class="species-gallery">
           <div class="species-card">
             <img src="coral.jpg" alt="Coral Reef" />
-            <p><strong>Coral Reefs</strong>: Colorful marine structures formed by tiny polyps that support a vast ecosystem.</p>
+            <p>
+              <strong>Coral Reefs</strong>: Colorful marine structures formed by
+              tiny polyps that support a vast ecosystem.
+            </p>
           </div>
           <div class="species-card">
             <img src="clownfish.jpg" alt="Clownfish" />
-            <p><strong>Clownfish</strong>: Small, brightly colored fish often found in sea anemones for protection.</p>
+            <p>
+              <strong>Clownfish</strong>: Small, brightly colored fish often
+              found in sea anemones for protection.
+            </p>
           </div>
           <div class="species-card">
             <img src="whale.jpg" alt="Whale" />
-            <p><strong>Whale</strong>: The largest mammals on Earth, known for their intelligence and long migrations.</p>
+            <p>
+              <strong>Whale</strong>: The largest mammals on Earth, known for
+              their intelligence and long migrations.
+            </p>
           </div>
         </div>
       </section>
@@ -80,10 +90,17 @@
       </section>
 
       <section>
-        <p>Learn more from the <a href="https://marine-institute.example.com" target="_blank">Marine Institute</a>.</p>
+        <p>
+          Learn more from the
+          <a href="https://marine-institute.example.com" target="_blank"
+            >Marine Institute</a
+          >.
+        </p>
       </section>
     </main>
+    <br /><br />
     <footer>
-        <p>&copy; 2025 Ocean Exploration Team. All rights reserved.</p> </footer> 
+      <p>&copy; 2025 Ocean Exploration Team. All rights reserved.</p>
+    </footer>
   </body>
 </html>
