--- a/join.html
+++ b/join.html
@@ -44,17 +44,20 @@
         <select id="interest" name="interest">
           <option value="oceans">Oceans</option>
           <option value="marine_environment">Marine Environment</option>
-          <option value="marine_life">Marine Life</option>
-        </select><br /><br />
+          <option value="marine_life">Marine Life</option></select
+        ><br /><br />
 
         <label for="why">Why do you want to join?</label><br />
-        <textarea id="why" name="why" rows="5" cols="40" required></textarea><br /><br />
+        <textarea id="why" name="why" rows="5" cols="40" required></textarea
+        ><br /><br />
 
         <input type="submit" value="Submit" />
       </form>
     </main>
+    <br /><br />
+
     <footer>
-      <p>&copy; 2025 Ocean Exploration Team. All rights reserved.</p> </footer> 
+      <p>&copy; 2025 Ocean Exploration Team. All rights reserved.</p>
+    </footer>
   </body>
 </html>
-  
