semi-final version, finished styling using CSS, chose an aquaic theme.

--- a/discover.html
+++ b/discover.html
@@ -17,7 +17,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="container">
       <section>
         <h1>Marine Species Exploration</h1>
         <p>
@@ -49,9 +49,10 @@
           </div>
         </div>
       </section>
-
+<br><br>
       <section>
         <h2>Species Information Table</h2>
+        <br>
         <table>
           <tr>
             <th>Species Name</th>
@@ -79,8 +80,9 @@
           </tr>
         </table>
       </section>
+      <br /><br>
 
-      <section>
+      <section class="species-facts">
         <h2>Top 3 Marine Species Loved by Ocean Researchers</h2>
         <ol type="I">
           <li>Blue Whale</li>
@@ -88,7 +90,7 @@
           <li>Mandarinfish</li>
         </ol>
       </section>
-
+<br><br>
       <section>
         <p>
           Learn more from the
