--- a/join.html
+++ b/join.html
@@ -17,7 +17,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="container">
       <h1>Join the Ocean Exploration Mission</h1>
       <form action="#" method="post">
         <label for="name">Full Name:</label><br />
