--- a/index.html
+++ b/index.html
@@ -17,28 +17,27 @@
       </nav>
     </header>
 
-    <main>
+    <main class="container">
       <br />
-      <section>
+      <section class="intro">
         <h1>Exploring the Depths of the Ocean</h1>
-        <p>
+        <p class="intro-text">
           <strong>The oceans are one of the greatest mysteries of our planet.</strong>
           <br />
           <em>Join us</em> on this journey to explore the depths yet to <u>be discovered.</u>
         </p>
-
+<br>
         <h2>Journey Goals</h2>
+        <br>  
         <ul>
           <li>Explore the ocean depths</li>
           <li>Learn about different types of marine life</li>
           <li>Understand the importance of oceans in Earth's ecosystem</li>
         </ul>
       </section>
-      <br>
-
+      <br /> <br>
       <section>
         <h2>Introduction Video</h2>
-        <br>
         <iframe
           width="560"
           height="315"
@@ -50,7 +49,6 @@
         ></iframe>
       </section>
     </main>
-    <br />
     <footer>
       <p>&copy; 2025 Ocean Exploration Team. All rights reserved.</p>
       
